fix: :sparkles: prevent page scrolling while map modal is open and stabilize scrollbars

--- a/src/components/sections/land-search/search-results/SearchResults.sass
+++ b/src/components/sections/land-search/search-results/SearchResults.sass
@@ -1,4 +1,6 @@
-#scrollable-lands-container
+#scrollable-lands-container // Container with overflow-y: scroll
+
+    scrollbar-gutter: stable // Prevent resizing of container when scrollbar appears/disappears
 
     // Style scrollbar for Chrome, Safari and Opera
     &::-webkit-scrollbar
